--- a/package.json
+++ b/package.json
@@ -1,14 +1,90 @@
 {
-  "name": "blocoesp32",
+  "name": "ideiaspace-mission",
   "version": "1.0.0",
+  "description": "Plataforma digital de programação em blocos para ensino de conceitos aeroespaciais",
   "main": "main.js",
+  "author": {
+    "name": "IdeiaSpace",
+    "email": "contato@ideiaspace.com.br"
+  },
+  "license": "MIT",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "dev": "electron . --dev",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish",
+    "lint": "eslint .",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "electron": "^27.0.0"
+    "@electron-forge/cli": "^7.2.0",
+    "@electron-forge/maker-deb": "^7.2.0",
+    "@electron-forge/maker-rpm": "^7.2.0",
+    "@electron-forge/maker-squirrel": "^7.2.0",
+    "@electron-forge/maker-zip": "^7.2.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
+    "@electron-forge/plugin-webpack": "^0.0.2",
+    "electron": "^27.0.0",
+    "eslint": "^8.0.0"
   },
   "dependencies": {
     "blockly": "^10.4.3"
+  },
+  "config": {
+    "forge": {
+      "packagerConfig": {
+        "name": "IdeiaSpace Mission",
+        "icon": "./assets/logo.png",
+        "asar": true,
+        "overwrite": true
+      },
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {
+            "name": "ideiaspace_mission",
+            "authors": "IdeiaSpace",
+            "description": "Plataforma de programação em blocos para ensino aeroespacial"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin",
+            "win32"
+          ]
+        },
+        {
+          "name": "@electron-forge/maker-deb",
+          "config": {
+            "options": {
+              "maintainer": "IdeiaSpace",
+              "homepage": "https://ideiaspace.com.br"
+            }
+          }
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "config": {
+            "options": {
+              "maintainer": "IdeiaSpace",
+              "homepage": "https://ideiaspace.com.br"
+            }
+          }
+        }
+      ],
+      "publishers": [
+        {
+          "name": "@electron-forge/publisher-github",
+          "config": {
+            "repository": {
+              "owner": "ideiaspace",
+              "name": "ideiaspace-mission"
+            }
+          }
+        }
+      ]
+    }
   }
 }
