feat: Implementação completa do controle de backend Arduino CLI integrado ao Electron
 Novas funcionalidades:
- Controle total do backend Arduino CLI via interface Electron
- Botões de iniciar/parar backend no modal de conexão
- Indicador de status em tempo real do backend
- Detecção automática de portas ESP32
- Comunicação IPC entre processo principal e renderer
- Cliente Arduino CLI para comunicação com backend
- Interface visual intuitiva com feedback do usuário

 Arquivos modificados:
- backend/server.js: Integração com serviço real Arduino CLI
- backend/services/arduino-cli-service.js: Implementação completa
- src/main/main.js: Handlers IPC para controle do backend
- src/renderer/controller/renderer.js: Lógica de controle UI
- src/renderer/view/index.html: Interface de botões de controle
- src/renderer/view/style.css: Estilos para controles do backend
- src/renderer/controller/arduino-cli-client.js: Cliente frontend

 Adicionados:
- Arduino CLI v1.0.4 com configuração ESP32
- Licença e arquivos essenciais do Arduino CLI
- Configuração .gitignore adequada

 Resultado: Aplicação Electron totalmente autocontida!

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,13 @@ Thumbs.db
 # Temporary files
 *.tmp
 *.temp
+
+# Arduino CLI specific ignores
+backend/arduino-cli/config/data/inventory.yaml
+backend/arduino-cli/config/downloads/
+backend/arduino-cli/config/data/packages/
+backend/arduino-cli/config/data/cache/
+
+# Include only essential Arduino CLI files
+!backend/arduino-cli/LICENSE.txt
+!backend/arduino-cli/config/arduino-cli.yaml
