--- a/backend/arduino-cli/config/arduino-cli.yaml
+++ b/backend/arduino-cli/config/arduino-cli.yaml
@@ -1,29 +1,28 @@
-{
-  "board_manager": {
-    "additional_urls": [
-      "https://espressif.github.io/arduino-esp32/package_esp32_index.json",
-      "https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_dev_index.json"
-    ]
-  },
-  "daemon": {
-    "port": "50051"
-  },
-  "directories": {
-    "data": "C:\\Users\\lfsz1\\Desktop\\Projetos\\IdeiaElectron\\IdeiaSpace\\backend\\arduino-cli\\config\\data",
-    "downloads": "C:\\Users\\lfsz1\\Desktop\\Projetos\\IdeiaElectron\\IdeiaSpace\\backend\\arduino-cli\\config\\downloads",
-    "user": "C:\\Users\\lfsz1\\Desktop\\Projetos\\IdeiaElectron\\IdeiaSpace\\backend\\arduino-cli\\config\\user"
-  },
-  "library": {
-    "enable_unsafe_install": false
-  },
-  "logging": {
-    "level": "info",
-    "format": "text"
-  },
-  "metrics": {
-    "enabled": false
-  },
-  "sketch": {
-    "always_export_binaries": false
-  }
-}
+board_manager:
+  additional_urls:
+    - https://dl.espressif.com/dl/package_esp32_index.json
+    - http://arduino.esp8266.com/stable/package_esp8266com_index.json
+build_cache:
+  compilations_before_purge: 10
+  ttl: 720h0m0s
+daemon:
+  port: "50051"
+directories:
+  data: backend\arduino-cli\config\data
+  downloads: backend\arduino-cli\config\downloads
+  user: backend\arduino-cli\config\user
+library:
+  enable_unsafe_install: false
+logging:
+  file: ""
+  format: text
+  level: info
+metrics:
+  addr: :9090
+  enabled: true
+output:
+  no_color: false
+sketch:
+  always_export_binaries: false
+updater:
+  enable_notification: true
