--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,8 @@
     "dev": "nodemon server.js",
     "install-cli": "node install-arduino-cli.js",
     "setup": "npm install && npm run install-cli",
+    "diagnostic": "node diagnostic.js",
+    "fix-esp32": "node diagnostic.js && npm run install-cli",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
