Implementar verificação e instalação automática de Arduino CLI e cores ESP32
- Adicionar verificação de pré-requisitos no npm start
- Implementar instalação automática de cores ESP32
- Melhorar feedback do botão 'Iniciar Backend'
- Configurar apenas cores ESP32 necessários
- Adicionar sistema de retry para instalação
- Criar configuração offline para ESP32 Dev Module

--- a/backend/arduino-cli/config/arduino-cli.yaml
+++ b/backend/arduino-cli/config/arduino-cli.yaml
@@ -9,9 +9,9 @@
     "port": "50051"
   },
   "directories": {
-    "data": "/Users/luiszarbielli/Trabalho/IdeiaSpace/backend/arduino-cli/config/data",
-    "downloads": "/Users/luiszarbielli/Trabalho/IdeiaSpace/backend/arduino-cli/config/downloads",
-    "user": "/Users/luiszarbielli/Trabalho/IdeiaSpace/backend/arduino-cli/config/user"
+    "data": "C:\\Users\\Ideia Space\\Desktop\\Executavel do Ideia Space Mission\\IdeiaSpace\\backend\\arduino-cli\\config\\data",
+    "downloads": "C:\\Users\\Ideia Space\\Desktop\\Executavel do Ideia Space Mission\\IdeiaSpace\\backend\\arduino-cli\\config\\downloads",
+    "user": "C:\\Users\\Ideia Space\\Desktop\\Executavel do Ideia Space Mission\\IdeiaSpace\\backend\\arduino-cli\\config\\user"
   },
   "library": {
     "enable_unsafe_install": false
