feat: configuração Arduino CLI e auto-setup (parte 1)

--- a/backend/arduino-cli/arduino-cli.yaml
+++ b/backend/arduino-cli/arduino-cli.yaml
@@ -1,10 +1,12 @@
 board_manager:
-    additional_urls: []
+    additional_urls:
+        - https://espressif.github.io/arduino-esp32/package_esp32_index.json
+        - https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_dev_index.json
 
 directories:
-    user: C:\Users\lfsz1\OneDrive\Área de Trabalho\Projetos\IdeiaSpace\backend\arduino-cli\config\user
-    data: C:\Users\lfsz1\OneDrive\Área de Trabalho\Projetos\IdeiaSpace\backend\arduino-cli\config\data
-    downloads: C:\Users\lfsz1\OneDrive\Área de Trabalho\Projetos\IdeiaSpace\backend\arduino-cli\config\downloads
+    user: config/user
+    data: config/data
+    downloads: config/downloads
 
 library:
     enable_unsafe_install: false
