--- a/backend/config/data/inventory.yaml
+++ b/backend/config/data/inventory.yaml
@@ -1,3 +1,5 @@
+build_cache:
+    compilation_count_since_last_purge: 1
 installation:
     id: 86485aaf-1d92-480c-87ba-54edcbf86b02
     secret: a2ed270d-fd7d-4f1e-9a4e-e8ae3a8550e5
