feat: Configuração do Electron Forge para build do Windows
- Adicionado script build-prepare-backend.js para gerenciar backups temporários
- Configurado forge.config.js para excluir packages ESP32 (caminhos longos)
- Atualizado package.json com comando make otimizado
- Criado README-INSTALACAO.md para usuários finais
- Build ZIP portátil funcionando (2.78 GB)
- Squirrel temporariamente desabilitado devido a limitações de caminho
- Packages ESP32 serão baixados na primeira execução do app
- Adicionado clean-esp32-packages.js para limpeza
- Atualizado .gitignore para excluir backups e builds

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,12 @@ out/package/
 # Manifesto de build
 build-manifest.json
 
+# Backups temporários do build
+.build-backup-temp/
+*_data_backup/
+*_config_data_backup/
+*_backend_data_backup/
+
 # Arquivos de configuração local
 .env
 .env.local
