--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "electron-forge start",
     "dev": "electron . --dev --disable-gpu --memory-pressure-off",
     "package": "electron-forge package",
-    "make": "electron-forge make",
+    "make": "node build-prepare-backend.js backup && electron-forge make ; node build-prepare-backend.js restore",
     "publish": "electron-forge publish",
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -26,7 +26,7 @@
     "clean:arduino": "./cleanup-arduino-cli.sh",
     "optimize": "npm run clean:arduino && npm run start",
     "build:prepare": "node build-prepare.js",
-    "build:clean": "rimraf out dist build-manifest.json",
+    "build:clean": "rimraf out dist build-manifest.json .build-backup-temp",
     "build:windows": "npm run build:prepare && npm run make -- --platform=win32 --arch=x64",
     "build:portable": "npm run build:prepare && electron-builder --win portable",
     "build:validate": "node build-validate.js",
@@ -35,7 +35,7 @@
     "postmake": "npm run build:validate"
   },
   "devDependencies": {
-    "@electron-forge/cli": "^7.2.0",
+    "@electron-forge/cli": "^7.10.2",
     "@electron-forge/maker-deb": "^7.2.0",
     "@electron-forge/maker-rpm": "^7.2.0",
     "@electron-forge/maker-squirrel": "^7.2.0",
@@ -43,10 +43,12 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
     "@electron-forge/plugin-webpack": "^0.0.2",
     "electron": "^27.0.0",
-    "eslint": "^8.0.0"
+    "eslint": "^8.0.0",
+    "fs-extra": "^11.3.2"
   },
   "dependencies": {
-    "blockly": "^10.4.3"
+    "blockly": "^10.4.3",
+    "electron-squirrel-startup": "^1.0.1"
   },
   "config": {
     "forge": {
