--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev": "electron . --dev --disable-gpu --memory-pressure-off",
     "package": "electron-forge package",
     "make": "node build-prepare-backend.js backup && electron-forge make ; node build-prepare-backend.js restore",
+    "premake": "node pre-build-check.js",
     "publish": "electron-forge publish",
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -23,6 +24,7 @@
     "backend:check": "cd backend && node check-prerequisites.js",
     "setup": "npm install && npm run backend:setup",
     "prestart": "npm run backend:check",
+    "prebuild": "node pre-build-check.js",
     "clean:arduino": "./cleanup-arduino-cli.sh",
     "optimize": "npm run clean:arduino && npm run start",
     "build:prepare": "node build-prepare.js",
@@ -30,6 +32,8 @@
     "build:windows": "npm run build:prepare && npm run make -- --platform=win32 --arch=x64",
     "build:portable": "npm run build:prepare && electron-builder --win portable",
     "build:validate": "node build-validate.js",
+    "dist": "node prepare-distribution.js",
+    "postmake": "npm run build:validate",
     "prebuild": "npm run build:prepare",
     "postbuild": "echo \"✅ Build concluído! Verifique a pasta 'out' para os instaladores.\"",
     "postmake": "npm run build:validate"
